<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient_background"
    android:layout_height="match_parent"
    tools:context=".OtpValidation">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/otpSentMsg1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="64dp"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/otp_Sent_msg"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/otpSentMsg"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="64dp"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:gravity="left"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:gravity="top|center"
        android:weightSum="6"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="1dp">

        <EditText
            android:id="@+id/otp0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:backgroundTint="#000000"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="1"
            android:focusable="false"
            android:includeFontPadding="true"
            android:inputType="number"
            android:nextFocusLeft="@+id/otp0"
            android:nextFocusRight="@+id/otp1"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/otp1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#000000"
            android:gravity="center"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="1"
            android:focusable="false"
            android:includeFontPadding="true"
            android:inputType="number"
            android:nextFocusLeft="@+id/otp0"
            android:nextFocusRight="@+id/otp2"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/otp2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#000000"
            android:clickable="false"
            android:gravity="center"
            android:cursorVisible="false"
            android:ems="1"
            android:focusable="false"
            android:includeFontPadding="true"
            android:inputType="number"
            android:nextFocusLeft="@+id/otp1"
            android:nextFocusRight="@+id/otp3"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/otp3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#000000"
            android:clickable="false"
            android:gravity="center"
            android:cursorVisible="false"
            android:ems="1"
            android:focusable="false"
            android:includeFontPadding="true"
            android:inputType="number"
            android:nextFocusLeft="@+id/otp2"
            android:nextFocusRight="@+id/otp4"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/otp4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#000000"
            android:clickable="false"
            android:cursorVisible="false"
            android:gravity="center"
            android:ems="1"
            android:focusable="false"
            android:includeFontPadding="true"
            android:inputType="number"
            android:nextFocusLeft="@+id/otp3"
            android:nextFocusRight="@+id/otp5"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/otp5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#000000"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="1"
            android:gravity="center"
            android:focusable="false"
            android:includeFontPadding="true"
            android:inputType="number"
            android:nextFocusLeft="@+id/otp4"
            android:nextFocusRight="@+id/otp5"
            android:textSize="30sp"
            android:textStyle="bold" />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttonset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:gravity="top|center"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
        tools:layout_editor_absoluteX="1dp">

        <Button
            android:id="@+id/resendOtp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="64dp"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="15sp"
            android:text="@string/resendOtp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />
        <TextView
            android:id="@+id/changeNumber"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="64dp"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/changeNumber"
            android:gravity="center"
            android:textColor="@color/purple_200"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/keyboardLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"></LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>